generate random number function created, new info on README

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="content">
+        <h1 id="random-numbers">Random Numbers</h1>
         <form>
             <label for="num1" class="user-label">Number 1</label>
             <input type="text" id="num1" class="user-input"><br>
