add function for making lottery ticket

--- a/index.html
+++ b/index.html
@@ -11,17 +11,14 @@
     <div class="content">
         <h1 id="random-numbers">Random Numbers</h1>
         <form>
-            <label for="num1" class="user-label">Number 1</label>
-            <input type="text" id="num1" class="user-input"><br>
-            <label for="num2" class="user-label">Number 2</label>
-            <input type="text" id="num2" class="user-input"><br>
-            <label for="num3" class="user-label">Number 3</label>
-            <input type="text" id="num3" class="user-input"><br>
-            <label for="num4" class="user-label">Number 4</label>
-            <input type="text" id="num4" class="user-input"><br>
-            <label for="num5" class="user-label">Number 5</label>
-            <input type="text" id="num5" class="user-input"><br>
-            <input type="submit" value="Submit" class="submit-button">
+            <label for="balls">Picks: </label>
+            <input id="ball1" class="balls" type="number">
+            <input id="ball2" class="balls" type="number">
+            <input id="ball3" class="balls" type="number">
+            <input id="ball4" class="balls" type="number">
+            <input id="ball5" class="balls" type="number">
+            <input id="ball6" class="balls" type="number"><br>
+            <input type="submit" value="Play Lottery!" class="submit-button">
         </form>
     </div>
     <script src="main.js"></script>
