changed title of h1 tag

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="content">
-        <h1 id="random-numbers">Random Numbers</h1>
+        <h1 id="random-numbers">Lottery Simulator</h1>
         <form id="lottery-form" class="form">
             <label for="balls">Picks: </label>
             <input id="ball1" class="balls" type="number" requred>
